fix h2 spacings

--- a/themes/clean-blog/source/css/article.styl
+++ b/themes/clean-blog/source/css/article.styl
@@ -48,12 +48,15 @@ article
         font-size 1.5em
         &.left
           float left
-
+h1, h2
+    margin-top 50px
+    margin-bottom 20px
 figure.highlight
     border-radius 0.4em
     background #222222
+    border-spacing 0
 
-// Code Box
+  // Code Box
   pre
     border none
     padding-left 20px
